--- a/package.json
+++ b/package.json
@@ -1,46 +1,40 @@
 {
-    "name": "@chisel-ui/columns",
-    "version": "0.0.1",
-    "description": "chisel-ui columns layout primitive",
-    "private": false,
-    "type": "module",
-    "exports": {
-        "./css": "./dist/Columns.css",
-        "./astro": "./src/Columns.astro"
-    },
-    "files": [
-        "src",
-        "dist"
-    ],
-    "scripts": {
-        "build": "tsup src/Columns.css --clean",
-        "watch": "npm run build -- --watch src",
-        "prepublishOnly": "npm run build"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/chisel-ui/columns.git"
-    },
-    "keywords": [
-        "astro",
-        "columns",
-        "layout"
-    ],
-    "author": "tony-sull <tony.f.sullivan@outlook.com>",
-    "license": "MIT",
-    "bugs": {
-        "url": "https://github.com/chisel-ui/columns/issues"
-    },
-    "homepage": "https://github.com/chisel-ui/columns#readme",
-    "devDependencies": {
-        "@chisel-ui/core": "^0.0.5",
-        "@chisel-ui/stack": "^0.0.4",
-        "autoprefixer": "^10.4.2",
-        "postcss": "^8.4.8",
-        "tsup": "^5.12.1",
-        "typescript": "^4.6.2"
-    },
-    "peerDependencies": {
-        "astro": "^0.24.0"
-    }
+	"name": "@chisel-ui/columns",
+	"version": "0.2.0",
+	"description": "chisel-ui columns layout primitive",
+	"private": false,
+	"type": "module",
+	"files": [
+		"InlineCluster.astro"
+	],
+	"scripts": {
+		"prepare": "husky install"
+	},
+	"lint-staged": {
+		"**/*": "prettier --write --ignore-unknown"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/chisel-ui/columns.git"
+	},
+	"keywords": [
+		"astro",
+		"columns",
+		"layout"
+	],
+	"author": "tony-sull <tony.f.sullivan@outlook.com>",
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/chisel-ui/columns/issues"
+	},
+	"homepage": "https://github.com/chisel-ui/columns#readme",
+	"devDependencies": {
+		"@chisel-ui/component": "^0.2.0",
+		"@chisel-ui/core": "^0.2.0",
+		"@chisel-ui/stack": "^0.2.0",
+		"husky": "^7.0.4",
+		"lint-staged": "^12.3.7",
+		"prettier": "^2.6.0",
+		"prettier-plugin-astro": "^0.0.12"
+	}
 }
